# gnucash-toolbox

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  clippy.toml  diesel.toml  flake.nix  git-z.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: release.yml
gnc-cli/: Cargo.toml  build.rs
gnc-cli/src/: command.rs  helpers.rs  lib.rs  main.rs  tracing.rs
gnc-cli/src/command/: add.rs  hello.rs  helpers.rs  list.rs
gnc-cli/tests/: hello.rs
gnc-cli/wix/: main.wxs
gnc-database/: Cargo.toml
gnc-database/src/: api_example.rs  lib.rs  model.rs  model_example.rs
gnc-db-schema/: Cargo.toml
gnc-db-schema/migrations/2024-11-17-134246_gnucash/: down.sql  up.sql
gnc-db-schema/src/: lib.rs
gnc-helpers/: Cargo.toml
gnc-helpers/src/: lib.rs  tracing.rs
migrations/2024-11-13-072831_create_entries/: down.sql  up.sql
src/: command.rs  database.rs  helpers.rs  lib.rs  main.rs  tracing.rs
src/command/: add.rs  hello.rs  helpers.rs  list.rs
src/database/: model.rs  schema.rs
tests/: hello.rs
wix/: main.wxs
xtask/src/: main.rs
