[package]
name = "gnc-database"
version = "0.1.0-dev.0"
authors.workspace = true
categories = ["database", "finance"]
edition.workspace = true
homepage.workspace = true
keywords = ["gnucash"]
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "A library to read and update a GnuCash database."

[dependencies]
bigdecimal = "0.4"
chrono = "0.4"
gnc-db-schema = { path = "../gnc-db-schema" }
gnc-helpers = { path = "../gnc-helpers" }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "2"

[dependencies.diesel]
version = "2"
features = ["returning_clauses_for_sqlite_3_35", "sqlite"]

[lints]
workspace = true
